# netfault

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: netfault.toml
src/: config.rs  fault.rs  lib.rs  main.rs  proxy.rs  stats.rs
tests/: integration.rs
